--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Park Ji-hoon</title>
     <link rel="icon" href="../Assets/Icons/icono.png">
-    <link rel="stylesheet" href="../Styles/diseño.css">
+    <link rel="stylesheet" href="Styles/diseño.css">
 </head>
 <body>
 <header>
@@ -69,4 +69,5 @@
   <p>Trabajo Practico 9 — Laboratorio II — realizado por el grupo: Rubi Solis, Abril Ocampo, Milagros Guerra</p>
 </footer>
 </body>
+
 </html>
