--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 tabindex="1">Información de Park Ji-hoon</h1>
   <h3>Datos personales</h3>
   <div class="perfil">
-      <img src="Img/Park_ji-hoon.webp" alt="...">
+     <img src="Img/Park_ji-hoon.webp" alt="Foto de Park Ji-hoon" class="Foto">
   <!-- Datos personales -->
   <section class="datos">
     <ul>
@@ -71,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
