Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="produccion">
             <ul>
                   <li>
-                    <img src="Img/Love_Revolution.webp" alt="...">
+                    <img src="Img/Love_Revolution.webp" alt="..." class="serie">
                     <div>
                         <h3>La revolucion del amor</h3>
                         <p><strong>Resumen:</strong> La serie coreana "Revolución de amor" ("Love Revolution") trata sobre un estudiante de secundaria llamado Gong Joo Young que se enamora a primera vista de Wang Ja Rim, una chica que parece apática y distante. La historia sigue los esfuerzos de Joo Young por conquistarla, a pesar de su constante molestia, mientras exploran el amor, la amistad y las complejidades de la vida escola</p>
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="Img/Love_Song_for_Illusion.webp" alt="...">
+                    <img src="Img/Love_Song_for_Illusion.webp" alt="..." class="serie">
                     <div>
                         <h3>Cancion del amor para la ilusion</h3>
                         <p><strong>Resumen:</strong> Trata de un romance y una historia de venganza en un contexto histórico-fantasioso. Sigue la historia del príncipe heredero Sajo Hyun, quien tiene dos personalidades: una, el heredero inteligente y talentoso, y otra, el seductor Ak Hee, que sufre un dolor extremo al ser tocado. La trama se complica cuando Yeon Wol, una asesina con una misión de venganza contra el rey, se convierte en la concubina del príncipe después de perder la memoria</p>
@@ -53,7 +53,7 @@
                     </div>
                 </li>
                     <li>
-                   <img src="Img/Weak_Hero.webp" alt="...">
+                   <img src="Img/Weak_Hero.webp" alt="..." class="serie">
                     <div>
                         <h3>Heroe debil</h3>
                          <p><strong>Resumen:</strong> Trata sobre un estudiante brillante pero físicamente débil que utiliza su intelecto y astucia para defenderse del acoso escolar </p>
@@ -71,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
