Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="produccion">
             <ul>
                   <li>
-                    <img src="Img/Love_Revolution.webp" alt="..." class="serie">
+                   <img src="Img/Love_Song_for_Illusion.webp" alt="..." class="serie">
                     <div>
                         <h3>La revolucion del amor</h3>
                         <p><strong>Resumen:</strong> La serie coreana "Revolución de amor" ("Love Revolution") trata sobre un estudiante de secundaria llamado Gong Joo Young que se enamora a primera vista de Wang Ja Rim, una chica que parece apática y distante. La historia sigue los esfuerzos de Joo Young por conquistarla, a pesar de su constante molestia, mientras exploran el amor, la amistad y las complejidades de la vida escola</p>
@@ -71,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
